tests/ui/proc-macro/pretty-print-hack/rental-0.5.6/src/lib.rs
//@ ignore-auxiliary (used by `../../../pretty-print-hack/hide.rs`)

#[derive(Print)]
enum ProceduralMasqueradeDummyType {
//~^ ERROR using
//~| WARN this was previously
//~| ERROR using
//~| WARN this was previously
//~| ERROR using
//~| WARN this was previously
//~| ERROR using
//~| WARN this was previously
    Input
}
